fixes shopping cart alignment on desktop

--- a/frontend/css/contact-me-800plus.css
+++ b/frontend/css/contact-me-800plus.css
@@ -80,7 +80,7 @@ header {
   background-color: rgba(212, 199, 171, 0.925);
 } */
 
-a {
+.attrib, a  {
   display: flex;
   flex-flow: row;
   justify-content: center;
@@ -97,8 +97,54 @@ a {
   /* border: 2px solid rgb(40, 228, 37); */
 }
 
-a:hover {
+.attrib:hover {
   color: rgb(152, 152, 152);
+}
+
+.attrib-cart {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 3rem;
+  color: black;
+  font-size: 1.1rem;
+  font-family: 'Raleway';
+  text-decoration: none;
+
+  /* border: 1px solid green; */
+}
+
+.cart-container {
+  display: flex;
+  /* border: 1px solid red; */
+}
+
+.shoppingcart-svg {
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  width: 25%;
+  height: 50%;
+
+  /* border: 1px solid; */
+}
+
+.cart-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  position: relative;
+  left: -5%;
+  top: 35%;
+  width: 15px;
+  height: 15px;
+  border: 1px solid black;
+  border-radius: 50%;
+  text-align: center;
 }
 
 .categories-list {
@@ -151,20 +197,9 @@ a:hover {
   opacity: 0;
   transform: translateY(8rem);
 }
+
 .icons-container {
   display: none;
-}
-.shoppingcart-svg {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-start;
-  width: 25px;
-  height: 25px;
-  left: 600px;
-}
-
-.shoppingcart-svg:hover {
-  fill: rgb(121, 221, 255);
 }
 
 .main-nav-tab.login {
@@ -186,20 +221,6 @@ a:hover {
   cursor: pointer;
 }
 
-.cart-number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.8rem;
-  position: absolute;
-  right: 6.5%;
-  top: 10%;
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  border-radius: 50%;
-  text-align: center;
-}
 /* ```````Navbar END`````````` */
 
 main {
@@ -214,8 +235,8 @@ main {
 }
 
 h1 {
-  font-family: "Montserrat", sans-serif;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 20px;
   width: 100%;
   text-align: center;
@@ -274,7 +295,6 @@ h1 {
   background-color: rgba(230, 75, 32, 0.689);
   margin-bottom: 1rem;
   border-radius: 5px;
-
 
   /* ~~~~FOR DEBUGGING~~~~ */
   /* border: 3px solid rgb(0, 255, 247); */
