--- a/frontend/css/jewelry-workshop-800plus.css
+++ b/frontend/css/jewelry-workshop-800plus.css
@@ -99,6 +99,7 @@ body {
   width: 40px;
 }
 
+.attrib,
 a {
   display: flex;
   flex-flow: row;
@@ -116,8 +117,54 @@ a {
   /* border: 2px solid rgb(40, 228, 37); */
 }
 
-a:hover {
+.attrib:hover {
   color: rgb(152, 152, 152);
+}
+
+.attrib-cart {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 3rem;
+  color: black;
+  font-size: 1.1rem;
+  font-family: 'Raleway';
+  text-decoration: none;
+
+  /* border: 1px solid green; */
+}
+
+.cart-container {
+  display: flex;
+  /* border: 1px solid red; */
+}
+
+.shoppingcart-svg {
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  width: 25%;
+  height: 50%;
+
+  /* border: 1px solid; */
+}
+
+.cart-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  position: relative;
+  left: -5%;
+  top: 35%;
+  width: 15px;
+  height: 15px;
+  border: 1px solid black;
+  border-radius: 50%;
+  text-align: center;
 }
 
 .categories-list {
@@ -173,18 +220,6 @@ a:hover {
 .icons-container {
   display: none;
 }
-.shoppingcart-svg {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-start;
-  width: 25px;
-  height: 25px;
-  left: 600px;
-}
-
-.shoppingcart-svg:hover {
-  fill: rgb(121, 221, 255);
-}
 
 .main-nav-tab.login {
   display: flex;
@@ -203,21 +238,6 @@ a:hover {
 .login-btn:hover {
   color: aqua;
   cursor: pointer;
-}
-
-.cart-number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.8rem;
-  position: absolute;
-  right: 6.5%;
-  top: 10%;
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  border-radius: 50%;
-  text-align: center;
 }
 
 /* ```````Navbar END`````````` */
